--- a/app/src/main/res/drawable/calendar_cell_selector.xml
+++ b/app/src/main/res/drawable/calendar_cell_selector.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/backgroundColor"/>
+            <solid android:color="@color/calendarCellBackground"/>
             <corners android:radius="5dp"/>
             <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
-            <stroke android:color="@color/accentColor" android:width="3dp"/>
+            <stroke android:color="@color/navigationBar" android:width="3dp"/>
         </shape>
     </item>
 </selector>
