--- a/app/src/main/res/drawable/input_field_default.xml
+++ b/app/src/main/res/drawable/input_field_default.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/CalSDefaultCellColor"/>
+    <solid android:color="@color/accent"/>
     <corners android:radius="5dp"/>
     <stroke android:color="@color/backgroundColor" android:width="3dp" />
 </shape>
