--- a/app/src/main/res/layout/announcement_activity.xml
+++ b/app/src/main/res/layout/announcement_activity.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/foregroundColor"
+    android:background="@color/background"
     tools:context=".contactActivities.AnnouncementActivity">
 
     <ScrollView
@@ -33,7 +33,7 @@
                     android:layout_centerVertical="true"
                     android:text="@string/APSTitle"
                     android:textSize="21sp"
-                    android:textColor="@color/accentColor"
+                    android:textColor="@color/whiteText"
                     android:id="@+id/APSTitleLabel" />
 
                 <!-- Title Field -->
@@ -60,7 +60,7 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/APSDescription"
                 android:textSize="21sp"
-                android:textColor="@color/accentColor"
+                android:textColor="@color/whiteText"
                 android:id="@+id/APSDescriptionLabel"/>
 
             <!-- Description Field -->
@@ -98,8 +98,8 @@
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:background="@color/backgroundColor"
-                    android:textColor="@color/accentColor"
+                    android:background="@color/accent"
+                    android:textColor="@color/whiteText"
                     android:onClick="pickDate"
                     android:text="@string/APSDateButtonText"/>
             </LinearLayout>
@@ -127,8 +127,8 @@
                     android:layout_weight="1"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:background="@color/backgroundColor"
-                    android:textColor="@color/accentColor"
+                    android:background="@color/accent"
+                    android:textColor="@color/whiteText"
                     android:onClick="pickTime"
                     android:text="@string/APSTimeButtonText"/>
             </LinearLayout>
@@ -148,7 +148,7 @@
                     android:layout_centerVertical="true"
                     android:text="@string/APSLocation"
                     android:textSize="21sp"
-                    android:textColor="@color/accentColor"
+                    android:textColor="@color/whiteText"
                     android:id="@+id/APSLocationLabel" />
 
                 <!-- Location Field -->
@@ -175,7 +175,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/APSTeacher"
                 android:textSize="21sp"
-                android:textColor="@color/accentColor"
+                android:textColor="@color/whiteText"
                 android:id="@+id/APSTeacherLabel"/>
 
             <!-- Teacher Field -->
@@ -193,8 +193,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:background="@color/backgroundColor"
-                android:textColor="@color/accentColor"
+                android:background="@color/accent"
+                android:textColor="@color/whiteText"
                 android:onClick="submitAnnouncement"
                 android:text="@string/APSSubmitButtonText"
                 android:id="@+id/APSApproveButton"/>
