--- a/app/src/main/res/layout/calendar_activity.xml
+++ b/app/src/main/res/layout/calendar_activity.xml
@@ -11,7 +11,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/backgroundColor"
+        android:background="@color/background"
         tools:context="com.wlmac.lyonsden2_android.CalendarActivity">
 
         <RelativeLayout
@@ -26,7 +26,7 @@
             android:gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:textColor="@color/accentColor"
+            android:textColor="@color/navigationBarText"
             android:id="@+id/CalSDateLabel"/>
 
         <ScrollView
@@ -43,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/backgroundColor"
+                android:background="@color/background"
                 android:id="@+id/CalSEventList"/>
         </ScrollView>
 
@@ -55,8 +55,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
         android:choiceMode="singleChoice"
-        android:divider="@color/skyBlueColor"
+        android:divider="@color/listDivider"
         android:dividerHeight="1dp"
-        android:background="@color/backgroundColor"
+        android:background="@color/listCellBackground"
         android:id="@+id/CalDList"/>
 </android.support.v4.widget.DrawerLayout>
