--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/EVHeight"
     android:padding="16dp"
-    android:background="@color/foregroundColor">
+    android:background="@color/calendarCellBackground">
 
     <TextView
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
         android:maxLines="1"
-        android:textColor="@color/accentColor"
+        android:textColor="@color/whiteText"
         android:textSize="@dimen/EVTitleInfoTextSize"
         android:id="@+id/EVTitleLabel"/>
 
@@ -28,7 +28,7 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@id/EVTitleLabel"
         android:layout_marginBottom="8dp"
-        android:textColor="@color/accentColor"
+        android:textColor="@color/whiteText"
         android:textSize="@dimen/EVTitleInfoTextSize"
         android:id="@+id/EVInfoLabel"/>
 
@@ -50,7 +50,7 @@
             android:layout_marginRight="4dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
-            android:textColor="@color/accentColor"
+            android:textColor="@color/whiteText"
             android:textSize="@dimen/EVDateLocationTextSize"
             android:id="@+id/EVDateLabel"/>
 
@@ -60,7 +60,7 @@
             android:layout_marginLeft="4dp"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
-            android:textColor="@color/accentColor"
+            android:textColor="@color/whiteText"
             android:textSize="@dimen/EVDateLocationTextSize"
             android:id="@+id/EVLocationLabel"/>
     </LinearLayout>
