--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -11,13 +11,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/backgroundColor"
+        android:background="@color/background"
         tools:context=".HomeActivity">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id = "@+id/HSContentView">
 
+            <!-- Top Views Container -->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -27,27 +28,30 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:id = "@+id/topViews"
-                android:background="#033e93">
+                android:background="@color/background">
 
+                <!-- Today Is Day -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/HSTodayIsDay"
                     android:id="@+id/HSTodayIsDay"
                     android:textSize="24sp"
-                    android:textColor="@color/accentColor"
+                    android:textColor="@color/listDivider"
                     android:gravity="center" />
 
+                <!-- Day Label -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/HSDayLabelDefault"
                     android:id="@+id/HSDayLabel"
                     android:layout_below="@+id/HSTodayIsDay"
-                    android:textColor="@color/accentColor"
+                    android:textColor="@color/listDivider"
                     android:textSize="150dp"
                     android:gravity="center" />
 
+                <!-- Time Table Container -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -59,256 +63,165 @@
                     android:layout_below="@+id/HSDayLabel"
                     android:id="@+id/HSCourseContainer">
 
+                    <!-- Period 1 Container -->
                     <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:onClick="periodClicked"
+                        style="@style/TimeTablePeriodContainer"
                         android:tag="0"
                         android:id="@+id/HSPeriod0" >
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseCodeDefault"
-                            android:id="@+id/HSCourseCode0"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:id="@+id/HSCourseCode0" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseNameDefault"
                             android:id="@+id/HSCourseName0"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseCode0"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseCode0" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSTeacherNameDefault"
                             android:id="@+id/HSTeacherName0"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseName0"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseName0" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSRoomNumberDefault"
                             android:id="@+id/HSRoomNumber0"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
                             android:layout_below="@+id/HSTeacherName0"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp"
                             android:layout_marginBottom="5dp" />
                     </RelativeLayout>
 
+                    <!-- Period 2 Container -->
                     <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:onClick="periodClicked"
+                        style="@style/TimeTablePeriodContainer"
                         android:tag="1"
                         android:id="@+id/HSPeriod1" >
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseCodeDefault"
-                            android:id="@+id/HSCourseCode1"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:id="@+id/HSCourseCode1" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseNameDefault"
                             android:id="@+id/HSCourseName1"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseCode1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseCode1" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSTeacherNameDefault"
                             android:id="@+id/HSTeacherName1"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseName1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseName1" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSRoomNumberDefault"
                             android:id="@+id/HSRoomNumber1"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
                             android:layout_below="@+id/HSTeacherName1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp"
                             android:layout_marginBottom="5dp" />
                     </RelativeLayout>
 
+                    <!-- Period 3 Container -->
                     <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:onClick="periodClicked"
+                        style="@style/TimeTablePeriodContainer"
                         android:tag="2"
                         android:id="@+id/HSPeriod2" >
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseCodeDefault"
-                            android:id="@+id/HSCourseCode2"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:id="@+id/HSCourseCode2" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseNameDefault"
                             android:id="@+id/HSCourseName2"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseCode2"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseCode2" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSTeacherNameDefault"
                             android:id="@+id/HSTeacherName2"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseName2"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseName2" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSRoomNumberDefault"
                             android:id="@+id/HSRoomNumber2"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
                             android:layout_below="@+id/HSTeacherName2"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp"
                             android:layout_marginBottom="5dp" />
                     </RelativeLayout>
 
+                    <!-- Period 4 Container -->
                     <RelativeLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:clickable="true"
-                        android:onClick="periodClicked"
+                        style="@style/TimeTablePeriodContainer"
                         android:tag="3"
                         android:id="@+id/HSPeriod3" >
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseCodeDefault"
-                            android:id="@+id/HSCourseCode3"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:id="@+id/HSCourseCode3" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSCourseNameDefault"
                             android:id="@+id/HSCourseName3"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseCode3"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseCode3" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSTeacherNameDefault"
                             android:id="@+id/HSTeacherName3"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
-                            android:layout_below="@+id/HSCourseName3"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp" />
+                            android:layout_below="@+id/HSCourseName3" />
 
                         <TextView
+                            style="@style/TimeTablePeriodParameter"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/HSRoomNumberDefault"
                             android:id="@+id/HSRoomNumber3"
-                            android:textColor="@color/accentColor"
-                            android:textSize="14sp"
-                            android:maxLines="1"
                             android:layout_below="@+id/HSTeacherName3"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginRight="5dp"
                             android:layout_marginBottom="5dp" />
                     </RelativeLayout>
                 </LinearLayout>
             </RelativeLayout>
 
+            <!-- Announcements Container -->
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -321,10 +234,10 @@
                 android:id="@+id/HSList"
                 android:layout_gravity="center_horizontal"
                 android:background="@color/foregroundColor"
-                android:divider="@color/accentColor"
+                android:divider="@color/listDivider"
                 android:dividerHeight="1dp"
-                android:overScrollFooter="@color/backgroundColor"
-                android:overScrollHeader="@color/backgroundColor"
+                android:overScrollFooter="@color/background"
+                android:overScrollHeader="@color/background"
                 android:layout_marginTop="1dp" />
         </RelativeLayout>
     </RelativeLayout>
@@ -335,8 +248,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
         android:choiceMode="singleChoice"
-        android:divider="@color/skyBlueColor"
+        android:divider="@color/listDivider"
         android:dividerHeight="1dp"
-        android:background="@color/backgroundColor"
+        android:background="@color/listCellBackground"
         android:id="@+id/HDList"/>
 </android.support.v4.widget.DrawerLayout>
