--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.wlmac.lyonsden2_android.ListActivity"
-        android:background="@color/backgroundColor">
+        android:background="@color/background">
 
         <ListView
             android:layout_width="match_parent"
@@ -24,8 +24,8 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_centerInParent="true"
-            android:background="@color/foregroundColor"
-            android:divider="@color/accentColor"
+            android:background="@color/background"
+            android:divider="@color/listDivider"
             android:dividerHeight="1dp"
             android:id="@+id/LSClubsEventsList" />
     </RelativeLayout>
@@ -36,8 +36,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
         android:choiceMode="singleChoice"
-        android:divider="@color/skyBlueColor"
+        android:divider="@color/listDivider"
         android:dividerHeight="1dp"
-        android:background="@color/backgroundColor"
+        android:background="@color/listCellBackground"
         android:id="@+id/LDList"/>
 </android.support.v4.widget.DrawerLayout>
