--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -15,7 +15,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@color/foregroundColor"
+        android:background="@color/background"
         tools:context="com.wlmac.lyonsden2_android.UserActivity">
 
         <!-- Display Name Area -->
@@ -28,29 +28,13 @@
 
             <!-- Display Name Label -->
             <TextView
-                android:layout_width="@dimen/USTextLabelWidth"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:gravity="end"
-                android:textColor="@color/accentColor"
-                android:textSize="16sp"
+                style="@style/UserParameterLabel"
                 android:text="@string/USName"/>
 
             <!-- Display Name Field -->
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:cursorVisible="false"
-                android:focusableInTouchMode="false"
-                android:focusable="false"
-                android:enabled="false"
-                android:clickable="false"
-                android:inputType="none"
+                style="@style/UserParameterField"
                 android:hint="@string/USNameHint"
-                android:textSize="16sp"
-                android:textColor="@color/accentColor"
                 android:id="@+id/USNameField"/>
         </LinearLayout>
 
@@ -65,29 +49,13 @@
 
             <!-- Email Label -->
             <TextView
-                android:layout_width="@dimen/USTextLabelWidth"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:gravity="end"
-                android:textColor="@color/accentColor"
-                android:textSize="16sp"
+                style="@style/UserParameterLabel"
                 android:text="@string/USEmail"/>
 
             <!-- Email Field -->
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:cursorVisible="false"
-                android:focusableInTouchMode="false"
-                android:focusable="false"
-                android:enabled="false"
-                android:clickable="false"
-                android:inputType="none"
+                style="@style/UserParameterField"
                 android:hint="@string/USEmailHint"
-                android:textSize="16sp"
-                android:textColor="@color/accentColor"
                 android:id="@+id/USEmailField"/>
         </LinearLayout>
 
@@ -102,100 +70,60 @@
 
             <!-- Access Label -->
             <TextView
-                android:layout_width="@dimen/USTextLabelWidth"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:gravity="end"
-                android:textColor="@color/accentColor"
-                android:textSize="16sp"
+                style="@style/UserParameterLabel"
                 android:text="@string/USAccess"/>
 
             <!-- Access Field -->
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:cursorVisible="false"
-                android:focusableInTouchMode="false"
-                android:focusable="false"
-                android:enabled="false"
-                android:clickable="false"
-                android:inputType="none"
+                style="@style/UserParameterField"
                 android:hint="@string/USAccessHint"
-                android:textSize="16sp"
-                android:textColor="@color/accentColor"
                 android:id="@+id/USAccessField"/>
         </LinearLayout>
 
         <!-- Update Info Button -->
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/UserButton"
             android:layout_below="@id/USAccess"
             android:layout_marginTop="15dp"
             android:layout_centerHorizontal="true"
-            android:padding="5dp"
-            android:background="@android:color/transparent"
             android:text="@string/USUpdateButtonText"
-            android:textColor="@color/accentColor"
-            android:onClick="editAccount"
             android:id="@+id/USUpdate"/>
 
         <!-- Become Leader Button -->
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/UserButton"
             android:layout_centerInParent="true"
-            android:background="@android:color/transparent"
-            android:padding="5dp"
             android:text="@string/USLeaderButtonText"
-            android:textColor="@color/accentColor"
             android:onClick="clubLeadershipApplication"
             android:id="@+id/USLeaderButton"/>
 
         <!-- Delete Account Button -->
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/UserButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:padding="5dp"
-            android:background="@android:color/transparent"
             android:text="@string/USDeleteButtonText"
-            android:textColor="@color/accentColor"
             android:textSize="12sp"
-            android:onClick="editAccount"
             android:id="@+id/USDelete"/>
 
         <!-- Sign out Button -->
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/UserButton"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:padding="5dp"
-            android:background="@android:color/transparent"
             android:text="@string/USSignOutButtonText"
-            android:textColor="@color/accentColor"
             android:textSize="12sp"
-            android:onClick="editAccount"
             android:id="@+id/USSignOut"/>
 
         <!-- Reset Password Button -->
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/UserButton"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:padding="5dp"
-            android:background="@android:color/transparent"
             android:text="@string/USResetPassButtonText"
-            android:textColor="@color/accentColor"
             android:textSize="12sp"
-            android:onClick="editAccount"
             android:id="@+id/USReset"/>
     </RelativeLayout>
 
@@ -205,8 +133,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
         android:choiceMode="singleChoice"
-        android:divider="@color/skyBlueColor"
+        android:divider="@color/listDivider"
         android:dividerHeight="1dp"
-        android:background="@color/backgroundColor"
+        android:background="@color/listCellBackground"
         android:id="@+id/LDList"/>
 </android.support.v4.widget.DrawerLayout>
