--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -37,5 +37,5 @@
     <dimen name="ClubSButtonTextSize">19sp</dimen>
     <dimen name="ClubSDescriptionHeight">88dp</dimen>
 
-    <dimen name="USTextLabelWidth">210px</dimen>
+    <dimen name="USTextLabelWidth">103dp</dimen>
 </resources>
